# vision_project

devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/include/yolov8_ros_msgs/: BoundingBox.h  BoundingBoxes.h
devel/lib/camera_split/: camera_spilt  camera_split_node
devel/lib/pkgconfig/: camera_split.pc  image_launch.pc  usb_cam.pc  yolov8_ros.pc  yolov8_ros_msgs.pc
devel/lib/usb_cam/: usb_cam_node
devel/share/camera_split/cmake/: camera_splitConfig.cmake
devel/share/image_launch/cmake/: image_launchConfig.cmake
devel/share/roseus/ros/yolov8_ros_msgs/: manifest.l
devel/share/usb_cam/cmake/: usb_camConfig.cmake
devel/share/yolov8_ros/cmake/: yolov8_rosConfig.cmake
devel/share/yolov8_ros_msgs/cmake/: yolov8_ros_msgs-msg-paths.cmake  yolov8_ros_msgsConfig.cmake
src/: README.md
src/YOLOv8/ultralytics/models/v8/: yolov8.yaml
src/Yolov8_ros/yolov8_ros/: CMakeLists.txt  package.xml
src/Yolov8_ros/yolov8_ros/launch/: cv_stero.launch  yolo_restero.launch  yolo_stero.launch  yolo_v8_left.launch  yolo_v8_right.launch
src/Yolov8_ros/yolov8_ros/scripts/: yolo_restero.py  yolo_stero.py  yolo_v8_copy.py  yolo_v8_left.py  yolo_v8_right.py
src/camera_split/: CMakeLists.txt
src/camera_split/calibrationdata/: left.yaml  ost.txt  right.yaml
src/camera_split/launch/: camera_spilt.launch  camera_spilt_calibration.launch
src/camera_split/src/: camera_split_node.cpp
